--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,4 @@
-$color: steelblue;
+$primary: MediumVioletRed;
+$body-bg: MistyRose;
 
-.my-flix {
-  color: $color;
-}
+@import '~bootstrap/scss/bootstrap.scss';
